# TerraFin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup
.github/workflows/: docs-pages.yml  package-smoke.yml  sync_to_hf_space.yml
.hf-space/: README.md
docs/: agent-runtime.md  agent-skill.md  analytics-notes.md  analytics.md  api-reference.md  architecture.md  caching.md  chart-architecture.md  configuration.md  data-layer.md  deployment.md  development.md  examples.md  feature-integration.md  getting-started.md  index.md  interface.md  legal.md  notebooks.md  private-data-wire-spec.md  ui-design-system.md
docs/agent/: README.md  architecture.md  hosted-runtime.md  index.md  models.md  usage.md
docs/javascripts/: header-home-link.js
docs/stylesheets/: extra.css
notebooks/: README.md
notebooks/analytics/: beta_estimation_demo.ipynb  black_litterman_demo.ipynb  chart_similarity_scan.ipynb  fundamental_analysis_demo.ipynb  rates_demo.ipynb  simulation_demo.ipynb  spectral_analysis_demo.ipynb  technical_analysis_demo.ipynb
notebooks/data/: portfolio_demo.ipynb  sec_edgar_demo.ipynb
notebooks/interface/: chart_plot_demo.ipynb
scripts/: collect-sec-table-fixtures.py  generate-agent-artefacts.py  package_smoke.py
skills/terrafin/: SKILL.md
src/TerraFin/: __init__.py  configuration.py  env.py
tests/: test_entrypoint_env_loading.py  test_packaging_metadata.py  test_terrafin_config.py
tests/agent/: test_cli.py  test_client.py  test_generated_artefacts_match.py  test_github_copilot_provider.py  test_google_provider.py  test_hosted_runtime.py  test_loop.py  test_market_snapshot_force_refresh_e2e.py  test_model_management.py  test_model_runtime.py  test_openai_model.py  test_runtime.py  test_runtime_helpers.py  test_sec_capabilities.py  test_service.py  test_session_store_light_metadata.py  test_situational_awareness.py  test_tools.py  test_transcript_store.py
tests/analytics/: test_beta_estimation.py  test_beta_public_api.py  test_breakout_helpers.py  test_dcf_engine.py  test_dcf_index_year_end.py  test_dcf_inputs.py  test_dcf_public_api.py  test_dcf_rates.py  test_lppl.py  test_mandelbrot.py  test_reverse_dcf.py  test_sizing.py  test_trend_signal.py
tests/data/: test_cache_manager.py  test_contracts_validation.py  test_credit_risk_indicators.py  test_cusip_resolver.py  test_data_factory.py  test_holdings_history.py  test_market_voices.py  test_private_access_client.py  test_private_access_fear_greed.py  (+9 more)
(+819 files in other folders)
