[project]
name = "TerraFin"
version = "0.0.1"
description = "Agent-ready Python toolkit and FastAPI interface for financial data, lightweight analytics, charting, and research workflows."
requires-python = ">=3.11"
authors = [
    {name = "Ki-Ung Song", email = "sk851@snu.ac.kr"}
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "cachetools",
    "fastapi>=0.115.0",
    "fredapi",
    "numpy",
    "openai>=2.31.0",
    "pandas",
    "plotly",
    "pyrate-limiter",
    "python-dotenv",
    "requests",
    "scipy",
    "sec-parser",
    "uvicorn[standard]>=0.32.0",
    "yfinance",
]

[project.optional-dependencies]
db = [
    "pymongo[srv]>=4.5",
]
dev = [
    "build",
    "pytest",
    "ruff",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "pymdown-extensions>=10.14,<11.0",
]
notebooks = [
    "ipywidgets",
    "matplotlib",
    "nbformat",
    "reactpy",
]

[project.scripts]
terrafin-agent = "TerraFin.agent.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"] # Pinning setuptools for robustness
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], namespaces = false}}

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
